--- a/partial_conv.ipynb
+++ b/partial_conv.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -180,42 +180,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "total number of train dataset: 50688\n",
-            "total number of test dataset: 654\n"
-          ]
-        },
-        {
-          "ename": "IndexError",
-          "evalue": "boolean index did not match indexed array along dimension 0; dimension is 240 but corresponding boolean dimension is 480",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal number of test dataset:\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;28mlen\u001b[39m(test_dataset))\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Get one batch\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m sample_batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43miter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# print(\"Keys in the batch:\", sample_batch.keys())\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# print(\"image shape:\", sample_batch[\"image\"].shape)               # torch.Size([4, 3, 480, 640])\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# print(\"masked_image shape:\", sample_batch[\"masked_image\"].shape) # torch.Size([4, 3, 480, 640])\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# print(\"masked_depth shape:\", sample_batch[\"masked_depth\"].shape)\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# print(\"mask shape:\", sample_batch[\"mask\"].shape)\u001b[39;00m\n",
-            "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/torch/utils/data/dataloader.py:631\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    629\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    630\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 631\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    633\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    635\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
-            "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/torch/utils/data/dataloader.py:675\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    673\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    674\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dataset_fetcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    676\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    677\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
-            "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-            "Cell \u001b[0;32mIn[3], line 53\u001b[0m, in \u001b[0;36mNYUDepthDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     50\u001b[0m     masked_depth \u001b[38;5;241m=\u001b[39m depth\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;66;03m# Where mask == 0, set color to 1.0 (white) and depth to 0\u001b[39;00m\n\u001b[0;32m---> 53\u001b[0m     \u001b[43mmasked_img\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmask_3d\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.0\u001b[39m\n\u001b[1;32m     54\u001b[0m     masked_depth[mask_2d \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     56\u001b[0m     \u001b[38;5;66;03m# If no mask, just pass the original images\u001b[39;00m\n",
-            "\u001b[0;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 0; dimension is 240 but corresponding boolean dimension is 480"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from torch.utils.data import DataLoader\n",
         "\n",
         "# Example: Using the train folder\n",
         "train_root = \"nyu_data/data/nyu2_train\"\n",
-        "train_dataset = NYUDepthDataset(root_dir=train_root, img_size=(480, 640), apply_mask=True)\n",
+        "train_dataset = NYUDepthDataset(root_dir=train_root, img_size=(240, 320), apply_mask=True)\n",
         "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
         "\n",
         "# Example: Using the test folder\n",
         "test_root = \"nyu_data/data/nyu2_test\"\n",
-        "test_dataset = NYUDepthDataset(root_dir=test_root, img_size=(480, 640), apply_mask=False)\n",
+        "test_dataset = NYUDepthDataset(root_dir=test_root, img_size=(240, 320), apply_mask=False)\n",
         "test_loader = DataLoader(test_dataset, batch_size=16, shuffle=False)\n",
         "\n",
         "print(\"total number of train dataset:\", len(train_dataset))\n",
@@ -327,7 +303,7 @@
         "        x1 = F.relu(x1)\n",
         "        x2, mask2 = self.pconv2(x1, mask1)\n",
         "        x2 = F.relu(x2)\n",
-        "        return x1, mask1, x2, mask2\n"
+        "        return x1, mask1, x2, mask2"
       ]
     },
     {
@@ -377,15 +353,15 @@
         "class InpaintingModel(nn.Module):\n",
         "    def __init__(self, input_channels=3):\n",
         "        super(InpaintingModel, self).__init__()\n",
-        "        self.enc1 = EncoderBlock(input_channels, 32)\n",
-        "        self.enc2 = EncoderBlock(32, 64)\n",
-        "        self.enc3 = EncoderBlock(64, 128)\n",
-        "        self.enc4 = EncoderBlock(128, 256)\n",
+        "        self.enc1 = EncoderBlock(input_channels, 16)\n",
+        "        self.enc2 = EncoderBlock(16, 32)\n",
+        "        self.enc3 = EncoderBlock(32, 64)\n",
+        "        self.enc4 = EncoderBlock(64, 128)\n",
         "        \n",
-        "        self.dec1 = DecoderBlock(256, 256, 256, 128)\n",
-        "        self.dec2 = DecoderBlock(128, 128, 128, 64)\n",
-        "        self.dec3 = DecoderBlock(64, 64, 64, 32)\n",
-        "        self.dec4 = DecoderBlock(32, 32, 32, 3)\n",
+        "        self.dec1 = DecoderBlock(128, 128, 128, 64)\n",
+        "        self.dec2 = DecoderBlock(64, 64, 64, 32)\n",
+        "        self.dec3 = DecoderBlock(32, 32, 32, 16)\n",
+        "        self.dec4 = DecoderBlock(16, 16, 16, 3)\n",
         "        \n",
         "        self.final_conv = nn.Conv2d(3, 3, kernel_size=3, padding=1)\n",
         "        \n",
@@ -431,7 +407,7 @@
       "outputs": [],
       "source": [
         "# Set up device, model, optimizer, and loss function.\n",
-        "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\"); print(device)\n",
+        "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cuda\" if torch.cuda.is_available() else \"cpu\"); print(device)\n",
         "model = InpaintingModel(input_channels=3).to(device)\n",
         "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
         "criterion = nn.L1Loss()  # Mean Absolute Error"
@@ -446,7 +422,7 @@
         "def train_one_epoch(model, dataloader, optimizer, criterion, device):\n",
         "    model.train()\n",
         "    running_loss = 0.0\n",
-        "    for batch in dataloader:\n",
+        "    for batch in tqdm(dataloader):\n",
         "        # Retrieve inputs from the batch.\n",
         "        masked_image = batch[\"masked_image\"].to(device)\n",
         "        mask = batch[\"mask\"].to(device)\n",
@@ -494,12 +470,19 @@
       "outputs": [],
       "source": [
         "num_epochs = 20\n",
-        "for epoch in tqdm(range(1, num_epochs + 1)):\n",
+        "for epoch in range(1, num_epochs + 1):\n",
         "    train_loss = train_one_epoch(model, train_loader, optimizer, criterion, device)\n",
         "    val_loss, val_dice = validate(model, test_loader, criterion, device)\n",
         "    \n",
         "    print(f\"Epoch {epoch}/{num_epochs} - Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f} | Val Dice: {val_dice:.4f}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
