--- a/partial_conv.ipynb
+++ b/partial_conv.ipynb
@@ -796,6 +796,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "torch.save(model.state_dict(), \"nyu_inpainting_model.pth\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
