--- a/partial_conv.ipynb
+++ b/partial_conv.ipynb
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -703,20 +703,20 @@
         }
       ],
       "source": [
-        "num_epochs = 20\n",
-        "best_val_loss = float('inf')\n",
+        "# num_epochs = 20\n",
+        "# best_val_loss = float('inf')\n",
         "\n",
-        "for epoch in range(1, num_epochs + 1):\n",
-        "    train_loss = train_one_epoch(model, train_loader, optimizer, criterion, device)\n",
-        "    val_loss, val_dice = validate(model, val_loader, criterion, device)\n",
+        "# for epoch in range(1, num_epochs + 1):\n",
+        "#     train_loss = train_one_epoch(model, train_loader, optimizer, criterion, device)\n",
+        "#     val_loss, val_dice = validate(model, val_loader, criterion, device)\n",
         "    \n",
-        "    print(f\"Epoch {epoch}/{num_epochs} - Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f} | Val Dice: {val_dice:.4f}\")\n",
+        "#     print(f\"Epoch {epoch}/{num_epochs} - Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f} | Val Dice: {val_dice:.4f}\")\n",
         "    \n",
-        "    # Save model when validation loss improves.\n",
-        "    if val_loss < best_val_loss:\n",
-        "        best_val_loss = val_loss\n",
-        "        torch.save(model.state_dict(), \"nyu_inpainting_best_model.pth\")\n",
-        "        print(f\"Saved best model with Val Loss: {best_val_loss:.4f}\")"
+        "#     # Save model when validation loss improves.\n",
+        "#     if val_loss < best_val_loss:\n",
+        "#         best_val_loss = val_loss\n",
+        "#         torch.save(model.state_dict(), \"nyu_inpainting_best_model.pth\")\n",
+        "#         print(f\"Saved best model with Val Loss: {best_val_loss:.4f}\")"
       ]
     },
     {
@@ -853,7 +853,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.12.2"
     }
   },
   "nbformat": 4,
