--- a/mask_line/conv_depth_multihead_attention.ipynb
+++ b/mask_line/conv_depth_multihead_attention.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -241,6 +241,54 @@
         "        # Decode to produce the inpainted RGB image\n",
         "        out = self.decoder(fused_bottleneck, fused_skips)\n",
         "        return out\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<>:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "<>:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_14592\\3898236297.py:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "  os.environ[\"PATH\"] += os.pathsep + \"C:\\Graphviz-12.2.1-win64/bin/\"\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'multihead_attention.png'"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from torchviz import make_dot\n",
+        "import torch\n",
+        "import os\n",
+        "os.environ[\"PATH\"] += os.pathsep + \"C:\\Graphviz-12.2.1-win64/bin/\"\n",
+        "\n",
+        "# 1. Instantiate your model\n",
+        "model = DepthEnhancedInpaintingNet(base_channels=8, levels=3, num_heads=4)\n",
+        "\n",
+        "# 2. Create dummy inputs matching your forward signature\n",
+        "rgb_input   = torch.randn(1, 3, 240, 320)   # batch=1, 3-channel RGB\n",
+        "depth_input = torch.randn(1, 1, 240, 320)   # batch=1, 1-channel depth\n",
+        "\n",
+        "# 3. Forward pass\n",
+        "out = model(rgb_input, depth_input)\n",
+        "\n",
+        "# 4. Build and save the computation graph\n",
+        "dot = make_dot(out, params=dict(model.named_parameters()))\n",
+        "dot.format = 'png'\n",
+        "dot.render('multihead_attention')\n"
       ]
     },
     {
@@ -708,7 +756,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
