--- a/mask_line/baseline.ipynb
+++ b/mask_line/baseline.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -206,6 +206,48 @@
         "        skips, bottleneck = self.encoder(masked_img)\n",
         "        out = self.decoder(bottleneck, skips)\n",
         "        return torch.sigmoid(out) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<>:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "<>:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_21920\\32131407.py:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "  os.environ[\"PATH\"] += os.pathsep + \"C:\\Graphviz-12.2.1-win64/bin/\"\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'baseline.png'"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from torchviz import make_dot\n",
+        "import torch\n",
+        "import os\n",
+        "os.environ[\"PATH\"] += os.pathsep + \"C:\\Graphviz-12.2.1-win64/bin/\"\n",
+        "\n",
+        "model = SimpleInpaintingNet(base_channels=8, levels=3)\n",
+        "x     = torch.randn(1, 3, 240, 320)        # dummy input\n",
+        "y     = model(x)\n",
+        "\n",
+        "# this will produce a .pdf (or .png) of the actual computation graph\n",
+        "dot = make_dot(y, params=dict(model.named_parameters()))\n",
+        "dot.format = 'png'\n",
+        "dot.render('baseline')\n"
       ]
     },
     {
@@ -623,7 +665,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
