--- a/mask_line/conv_depth_simple_attention.ipynb
+++ b/mask_line/conv_depth_simple_attention.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -253,7 +253,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<>:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "<>:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_22272\\1703064653.py:4: SyntaxWarning: invalid escape sequence '\\G'\n",
+            "  os.environ[\"PATH\"] += os.pathsep + \"C:\\Graphviz-12.2.1-win64/bin/\"\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'simple_attention.png'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from torchviz import make_dot\n",
+        "import torch\n",
+        "import os\n",
+        "os.environ[\"PATH\"] += os.pathsep + \"C:\\Graphviz-12.2.1-win64/bin/\"\n",
+        "\n",
+        "# 1. instantiate your model\n",
+        "model = DepthEnhancedInpaintingNet_SimpleAttention(base_channels=8, levels=3, reduction=4)\n",
+        "\n",
+        "# 2. create dummy inputs matching your forward signature\n",
+        "rgb_input   = torch.randn(1, 3, 240, 320)   # batch=1, 3-channel RGB\n",
+        "depth_input = torch.randn(1, 1, 240, 320)   # batch=1, 1-channel depth\n",
+        "\n",
+        "# 3. do a forward pass\n",
+        "out = model(rgb_input, depth_input)\n",
+        "\n",
+        "# 4. build and save the graph\n",
+        "dot = make_dot(out, params=dict(model.named_parameters()))\n",
+        "dot.format = 'png'\n",
+        "dot.render('simple_attention')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -328,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -356,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -392,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -416,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -518,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -716,7 +764,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
